# airis-mock

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  openapi.yml
.github/workflows/: action-lint.yml  audit.yml  clippy.yml  docker-build.yml  rustfmt.yml  test.yml
docs/: openapi.yml
src/: main.rs
src/handlers/: check_teikyou_unique_search_servlet.rs  get_body_types.rs  health_check.rs  mod.rs  root.rs  teikyou_unique_search_servlet.rs
src/models/: airis.rs  body_type.rs  error_type.rs  mod.rs  shape_code.rs  xml.rs
src/static/: error_codes.json  vehicle_shape_codes.json
