[package]
name = "mock-airis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6.0"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = "0.4.41"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
