[package]
name = "mock-airis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8.2"
quick-xml = { version = "0.38", features = ["serialize"] }
chrono = "0.4.42"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
