[package]
name = "mock-airis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8.2"
quick-xml = { version = "0.39", features = ["serialize"] }
chrono = "0.4.42"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
